# ros_detection_legs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  setup.py
.doc/: ros_detection_legs.drawio
.doc/equation/: info.txt
cfg/: HyperParameters.cfg
data/processed/: train.csv
model/train/: parameters.json  saved_model.pb
model/train copy/: saved_model.pb
model/train copy/variables/: variables.data-00000-of-00001  variables.index
model/train/variables/: variables.data-00000-of-00001  variables.index
nodes/: detecor_node.py
src/: preprocessing.py  processing.py  train.py  training.py
src/model/: train.py
src/preprocessing/: processing.py  segmentation.py
src/preprocessing/modules/: segmentation.py
src/ros_detection_legs/deep_learning/config/: loader.py  parameters.json
src/ros_detection_legs/deep_learning/libpreprocessing/: segmentation.py
src/ros_detection_legs/deep_learning/model/: train.py
src/ros_detection_legs/deep_learning/preprocessing/: processing.py  segmentation.py
src/ros_detection_legs/deep_learning/preprocessing/modules/: segmentation.py
src/ros_detection_legs/model/train/: saved_model.pb
src/ros_detection_legs/model/train/variables/: variables.data-00000-of-00001  variables.index
