<?xml version="1.0"?>
<package format="2">
  <name>ros_detection_legs</name>
  <version>0.0.0</version>
  <description>The ros_detection_legs package</description>

  <maintainer email="hugo@todo.todo">hugo</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>ros_pygame_radar_2D</build_depend>
  <exec_depend>ros_pygame_radar_2D</exec_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
